# carblang

./: CMakeLists.txt  LICENSE  README.md  counter.py  gitattributes  lbuild.sh  wbuild.bat
examples/: hello-world.crb  results.py  run_tests.py
examples/crb/: classes-inherit.crb  classes-no-init.crb  classes-return.crb  classes.crb  conditions.crb  dict.crb  files.crb  for-loop.crb  hello-world.crb  json.crb  nested-classes-functions.crb  nested-classes.crb  nested-functions.crb  profile.crb  teams.crb  vars.crb  while-loop.crb
examples/crb/base/: for-loop.crb  format.crb  while-loop.crb
examples/crb/classes/: classes-return.crb  classes.crb  nested-classes-functions.crb
examples/crb/files/: csv.crb  files.crb  json.crb
examples/crb/functions/: functions.crb
examples/crb/modules/: encode.crb  gui.crb  html.crb  math.crb  profiler.crb  random.crb  regex.crb  time.crb
examples/crb/modules/gui/: button.crb  interface.crb  shapes.crb  small_interface.crb  text.crb  texture.crb
examples/crb/modules/gui/elements/: button_example.crb  checkbox_example.crb  dialog_example.crb  input_example.crb  list_example.crb  menu_example.crb  progress_bar_example.crb  slider_example.crb  switch_example.crb
examples/crb/modules/gui/sixui/: button.crb  checkbox.crb  dialog.crb  input.crb  list.crb  menu.crb  progress_bar.crb  slider.crb  switch.crb  text.crb
examples/crb/structures/: arrays.crb  string.crb
include/core/: ang.hpp  array_methods.hpp  compiler.hpp  core.hpp  csv.hpp  define.hpp  deps.hpp  dict_methods.hpp  error.hpp  expr.hpp  forward.hpp  globals_methods.hpp  json.hpp  macro_builder.py  module.hpp  native.hpp  opcode.hpp  parser.hpp  primitive_methods.hpp  profile.hpp  scanner.hpp  stmt.hpp  token.hpp  token_type.hpp  vm.hpp
include/core/gui/: gui.hpp
include/core/html/: base.hpp  cml.hpp  components.hpp  core.hpp  deps.hpp  page.hpp  tag.hpp
include/core/native/: array.hpp  conversion.hpp  dict.hpp  encode.hpp  file.hpp  global.hpp  graphics.hpp  math.hpp  profiler.hpp  random.hpp  regex.hpp  string.hpp  text.hpp  time.hpp  web.hpp
src/: carblang.cpp
src/core/: ast.cpp  compiler.cpp  core.cpp  error.cpp  module.cpp  parser.cpp  scanner.cpp  test_core.cpp  token.cpp  vm.cpp
src/html/: components.cpp  components.tpp  page.cpp  page.tpp  tag.cpp
